feat: clock creation after sign_up
